# ecom-engine

./: .gitignore  Cargo.toml  README.md  config.json  docker-compose.yml  muuttujat.txt  send_updates.sh
docker/: Dockerfile.data_stream  Dockerfile.rest_api  cfg.json  generate_docker_files.py  generated_docker_schema.json  shared.py
migrations/init/: down.sql  up.sql
public/: index.html  script.js  style.css
src/: docker.rs  error.rs  http.rs  lib.rs  logger.rs  postgres.rs  redis.rs  schema.rs  stream.rs
src/api/: rest.rs
src/cfg/: file.rs  mod.rs
src/data/: db.rs  mod.rs  schema.rs  stream.rs
src/services/: mod.rs
src/services/brand/: handler.rs  mod.rs  model.rs  query.rs  service.rs
src/services/cart/: handler.rs  mod.rs  model.rs  query.rs  service.rs
src/services/category/: mod.rs  model.rs  query.rs
src/services/discount/: handler.rs  model.rs  query.rs  service.rs  utils.rs
src/services/identity/: handler.rs  middleware.rs  mod.rs  model.rs  service.rs  utils.rs
src/services/order/: handler.rs  model.rs  query.rs  service.rs  utils.rs
src/services/product/: handler.rs  mod.rs  model.rs  query.rs  service.rs
src/services/stock/: handler.rs  mod.rs  model.rs  query.rs  service.rs
