[package]
name = "ecom-engine"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "data_stream"
path = "src/bin/data_stream.rs"

[[bin]]
name = "rest_api"
path = "src/bin/rest_api.rs"


[dependencies]
dialoguer = "0.10"
clap = { version = "4.0", features = ["derive"] }
actix-cors = "0.7.0"
actix-service = "2"
actix-identity = "0.7.1"
actix-session = { version = "0.9", features = ["cookie-session"] }

actix-web = { version = "4", default-features = true, features = ["cookies", "secure-cookies"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
jsonwebtoken = "9.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
r2d2 = "0.8.9"
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "1.0.61"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.25.4", features = ["tokio-comp"] }
log = "0.4.21"
rand = "0.8.5"
futures = "0.3.30"
serde_yaml = "0.9.34"
futures-util = "0.3.30"
base64 = "0.22.1"
derive_more = "0.99.18"
uuid = { version = "1.9.1", features = ["v4"]}
